--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@aws-sdk/lib-storage": "^3.957.0",
     "@hookform/resolvers": "^5.2.2",
     "@prisma/adapter-pg": "^7.2.0",
-    "@prisma/client": "^7.2.0",
+    "@prisma/client": "^7.3.0",
     "@tanstack/react-table": "^8.21.3",
     "@tiptap/extension-color": "^3.15.3",
     "@tiptap/extension-highlight": "^3.15.3",
@@ -46,7 +46,7 @@
     "next-auth": "^4.24.13",
     "papaparse": "^5.5.3",
     "pg": "^8.16.3",
-    "prisma": "^7.2.0",
+    "prisma": "^7.3.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-dropzone": "^14.3.8",
@@ -66,5 +66,9 @@
     "eslint-config-next": "16.1.0",
     "tailwindcss": "^4",
     "typescript": "^5"
+  },
+  "overrides": {
+    "cookie": "^0.7.0",
+    "lodash": "^4.17.22"
   }
 }
